KFileWidget: better exclude string that may look like Urls

BUG: 473228
(cherry picked from commit 1f8976936d60979f4f329ba151d2cc870b7faf1b)